themes/finna2/less/finna/myresearch.less
.myresearch-row {
  padding: 10px;
  margin: 0;
  word-wrap: break-word;
  @media(max-width:@screen-xs-max) {
    .row();
  }
  &:nth-child(odd) {
    background: @table-bg-accent;
  }
  .record-title {
    margin: 0;
    font-weight: 400;
    font-size: 1.2em;
    margin-bottom: 2px;
  }
  .no-checkbox {
    font-size: 0.8em;
    color: @gray-light;
  }
  .alert {
    padding: 4px;
    margin-bottom: 3px;
    margin-top: 3px;
  }
  // row for holds information
  .holds-status-information, .checkedout-status-information {
    @media(min-width: @screen-sm-min) {
      text-align: right;
    }
  }
  .checkboxFilter {
    padding-left: 0;
    .checkbox {
      padding-left: 0;
      margin-top: 0;
      label {
        margin-left: 0;
      }
    }
  }
  #label-title-column span {
    float: right;
  }
}

.useraccount-table.online-payment .checkboxFilter {
  margin-top: 2px;
}

.checkboxFilter.mylist-select-all {
  padding-left: 0;
  .checkbox {
    padding-left: 0;
    label {
      margin-left: 0;
    }
  }
  white-space: nowrap;
}

.changeHolds {
  display: inline-block;
}

.myresearch-grid-list .cover-image {
  max-width: 100px;
  max-height: 200px;
}

.librarycard-barcode {
  @media (min-width: @screen-sm) {
    margin-bottom: 0.5em;
  }
  svg {
    background-color: white;
    padding: .1em;
  }
}

.loan-history-purge-all, .button-bottom {
  margin-top: 10px;
}
.loan-history-buttons-bottom {
  display: flex;
}

.myresearch-table {
  width: 100%;
  margin: 0;
  th,td {
    vertical-align: top;
    padding: 5px;
  }
  .recordcover {
    min-width: 30px;
  }
  .toolbar {
    display: flex;
    flex-direction: row;
    align-items: center;
    &.no-list-functions {
      justify-content: space-between;
      @media(max-width: @screen-sm) {
        flex-direction: column-reverse;
        align-items: flex-start;
      }
      .myresearch-notification {
        height: fit-content;
      }
    }
    .btn-finna-toolbar {
      margin: 3px 0px;
      @media (max-width: @screen-md) {
        font-size: 0.9em;
      }
    }
    .btn-group {
      margin-right: 20px;
      .btn {
        margin-right: 1px;
        &:last-child {
          margin-right: 0;
        }
      }
      &:last-child {
        margin-right: 0;
      }
      @media(max-width: @screen-sm) {
        margin-right: 10px;
      }
    }
    .checkbox-col {
      display: flex;
      align-items: baseline;
      padding: 5px;
    }
    .list-functions {
      display: flex;
      flex-direction: row;
      flex-basis: 100%;
      align-items: baseline;
      justify-content: space-between;
    }
    @media(max-width: @screen-sm) {
      align-items: baseline;
    }
  }
  .sort-button ul.dropdown-menu li a {
    font-size: 1em;
  }

  @media(min-width: @screen-sm) {
    .half-table-column {
      width: 50%;
      float: left;
    }
    .title-column{
      width: 60%;
      float: left;
    }
    .status-column{
      width: 40%;
      float: left;
    }
  }
  .myresearch-count {
    line-height: 35px;
    font-weight: bold;
    &.no-buttons {
      line-height: inherit;
    }
  }
}

.myresearch-notes {
  clear: both;
  margin-top: 10px;
}
.myresearch-notes a, .myresearch-notes i {
  color: @gray-light;
}
.row.record-container.myresearch-row:last-child {
  margin-bottom: 20px;
  box-shadow: 0px 15px 30px -25px @gray;
}

.myresearch-grid-list {
  margin-bottom: 20px;
  > h2 {
    margin-top: 0;
    border-bottom: none;
    padding: 10px;
    padding-bottom: 0px;
    margin-bottom: 0px;
  }
  > h4 {
    margin-left: 10px;
  }
  .myresearch-row:last-child {
    box-shadow: none;
  }
  #copyToFavourites {
    padding-top: 5px;
  }
  .alert {
    margin: 12px 0;
  }
  .sort-option-container {
    display: flex;
    align-items: baseline;
    .button-label {
      margin-right: 5px;
    }
  }
  .sort-col  {
    a.dropdown-toggle {
      margin-bottom: 0;
      height: 30px;
      font-size: 0.9em;
      @media (max-width: @screen-md) {
        margin-top: 6px;
      }
      @media (max-width: @screen-sm) {
        span {
          max-width: 200px;
        }
      }
    }
    @media (max-width: @screen-sm) {
      .dropdown-menu > li > a {
        max-width: 270px;
      }
      .dropdown-toggle span:not('.icon'), .dropdown-menu > li > a {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        display: inline-block;
        vertical-align: bottom;
      }
    }
  }

}
.list-description,
.public-list-desc,
.myresearch-notes,
.template-dir-list .notes,
.public-list-embed .notes {
  details {
    margin-bottom: 10.5px;
    outline: 1px solid #d1d1d1;
    background: white;
    padding-left: 5px;
    p {
      padding-left: 5px;
    }
    summary::-webkit-details-marker {
      display: none;
    }
    summary:before {
      content: ' ';
      border: solid @gray;
      border-width: 0 2px 2px 0;
      display: inline-block;
      padding: 0 5px 5px 0;
      transform: rotate(45deg);
      margin-right: 10px;
      margin-top: 5px;
      margin-bottom: 3px;
    }
    summary {
      display: block;
      margin-right: 0;
      outline: 1px solid #d1d1d1;
      background: #fafafa;
      padding: 10px;
      margin-left: -5px;
      p {
        display: inline;
        padding-left: 0;
      }
    }
  }
  details[open] {
    padding-bottom: 5px;
    summary::before {
      transform: rotate(-135deg);
      margin-bottom: 0;
      margin-top: 10px;
    }
    summary {
      margin-bottom: 10px;
    }
  }
  .truncate-field.truncate-done {
    div:first-child {
      padding-top: 5px;
    }
    details {
      margin-left: 1px;
      margin-right: 1px;
    }
  }
  .more-link,
  .less-link {
    margin-bottom: 15px;
  }
}
/* ... */

